Fixed wrong width divs

--- a/frontend/src/pages/Experience/Experience.css
+++ b/frontend/src/pages/Experience/Experience.css
@@ -10,6 +10,5 @@
 }
 .TopMarginDivExperience {
     background-color: #0d1117;
-    width: 100vw;
     height: 2rem;
 }
