--- a/frontend/src/pages/Projects/Projects.css
+++ b/frontend/src/pages/Projects/Projects.css
@@ -10,6 +10,5 @@
 }
 .TopMarginDivProjects {
     background-color: #091526;
-    width: 100vw;
     height: 2rem;
 }
