--- a/frontend/src/pages/Skills/Skills.css
+++ b/frontend/src/pages/Skills/Skills.css
@@ -10,6 +10,5 @@
 }
 .TopMarginDivSkills {
     background-color: #0A2142;
-    width: 100vw;
     height: 2rem;
 }
